[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/VRPlayer.gd" type="Script" id=1]
[ext_resource path="res://Player/Controller/Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/MovePoint/MovePoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/InputHandler.gd" type="Script" id=4]
[ext_resource path="res://Player/Sword/Sword.tscn" type="PackedScene" id=5]

[node name="VRPlayer" type="ARVROrigin"]
script = ExtResource( 1 )

[node name="InputHandler" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Head" type="ARVRCamera" parent="." groups=[
"VRCamera",
]]
current = true

[node name="LeftHand" parent="." instance=ExtResource( 2 )]

[node name="Sword" parent="LeftHand" instance=ExtResource( 5 )]

[node name="RightHand" parent="." instance=ExtResource( 2 )]
controller_id = 2

[node name="MovePoint" parent="." instance=ExtResource( 3 )]
arvr_origin_path = NodePath("..")
arvr_head_path = NodePath("../Head")

[node name="Tween" type="Tween" parent="."]
[connection signal="move_action_requested" from="InputHandler" to="." method="_on_InputHandler_move_action_requested"]
[connection signal="trackpad_pressed" from="LeftHand" to="InputHandler" method="_on_LeftHand_trackpad_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
